--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
         <dependency>
