--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,10 +33,10 @@ spring:
     druid:
       driver-class-name: oracle.jdbc.driver.OracleDriver
       #"jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
-      url: "jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
+      url: "jdbc:oracle:thin:@127.0.0.1:1521/orcl.168.0.70"
       maxActive: 1000
-      username: MRQS
-      password: MRQS
+      username: mrqs
+      password: mrqs
       initial-size: 20
       max-wait: 100000
       min-idle: 5
@@ -56,7 +56,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   redis:
-    host: 115.220.9.93
+    host: 127.0.0.1
     port: 6379
     database: 1
     password: 98761234
@@ -88,9 +88,9 @@ usercenter:
   LoginFilter:
     enable: true
 fileUpload:
-  path: C:\Users\LiuChenLiang\Desktop\file_test
+  path: C:\Users\Administrator\Desktop\file_test
   tempPath: \temp\
-  basePath: C:\Users\LiuChenLiang\Desktop\
+  basePath: C:\Users\Administrator\Desktop\
   unZipPath: \unZip\
-  pdfPath: C:\Users\LiuChenLiang\Desktop\pdf\
-  excelPath: C:\Users\LiuChenLiang\Desktop\excel\
+  pdfPath: C:\Users\Administrator\Desktop\pdf\
+  excelPath: C:\Users\Administrator\Desktop\excel\
