--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,10 +33,10 @@ spring:
     druid:
       driver-class-name: oracle.jdbc.driver.OracleDriver
       #"jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
-      url: "jdbc:oracle:thin:@127.0.0.1:1521/orcl.168.0.70"
+      url: "jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
       maxActive: 1000
-      username: mrqs
-      password: mrqs
+      username: MRQS
+      password: MRQS
       initial-size: 20
       max-wait: 100000
       min-idle: 5
@@ -56,7 +56,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   redis:
-    host: 127.0.0.1
+    host: 115.220.9.93
     port: 6379
     database: 1
     password: 98761234
