--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,10 +33,10 @@ spring:
     druid:
       driver-class-name: oracle.jdbc.driver.OracleDriver
       #"jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
-      url: "jdbc:oracle:thin:@127.0.0.1:1521/ORCL"
+      url: "jdbc:oracle:thin:@115.220.9.93:1521/orcl.168.0.70"
       maxActive: 1000
-      username: MRQS
-      password: MRQS
+      username: mrqs
+      password: mrqs
       initial-size: 20
       max-wait: 100000
       min-idle: 5
